# mcp-filesystem

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml
config/: config.example
src/mcp_yamlfilesystem/: __init__.py  auth.py  config.py  diff_engine.py  exceptions.py  filesystem.py  server.py  smb_connection.py  yaml_manager.py
tests/: __init__.py  conftest.py  test_auth.py  test_ci_integration.py  test_diff_engine.py  test_http_config.py  test_mcp_integration.py  test_oauth_config.py  test_security.py  test_server.py  test_server_advanced.py  test_smb_config.py  test_stdio_transport.py  test_yaml_manager.py
